--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </li>
 
         <li>
-          <a href="#">Baixar o e-book do Mykebrito</a>
+          <a href="#">Baixar o e-book do Maykbrito</a>
         </li>
 
         <li>
